revert wrong refactor `toList()`
revert to `Collectors.toList()` in the modules still using Java 11