@@ -237,7 +237,7 @@ public class ShareConsumeRequestManager implements RequestManager, MemberStateLi
                 }
             };
             return new UnsentRequest(requestBuilder, Optional.of(target)).whenComplete(responseHandler);
-        }).toList();
+        }).collect(Collectors.toList());
 
         return new PollResult(requests);
     }
@@ -715,7 +715,7 @@ public class ShareConsumeRequestManager implements RequestManager, MemberStateLi
                 List<Node> leaderNodes = response.data().nodeEndpoints().stream()
                     .map(e -> new Node(e.nodeId(), e.host(), e.port(), e.rack()))
                     .filter(e -> !e.equals(Node.noNode()))
-                    .toList();
+                    .collect(Collectors.toList());
                 metadata.updatePartitionLeadership(partitionsWithUpdatedLeaderInfo, leaderNodes);
             }
 
@@ -856,7 +856,7 @@ public class ShareConsumeRequestManager implements RequestManager, MemberStateLi
                 List<Node> leaderNodes = response.data().nodeEndpoints().stream()
                     .map(e -> new Node(e.nodeId(), e.host(), e.port(), e.rack()))
                     .filter(e -> !e.equals(Node.noNode()))
-                    .toList();
+                    .collect(Collectors.toList());
                 metadata.updatePartitionLeadership(partitionsWithUpdatedLeaderInfo, leaderNodes);
             }
 
