@@ -569,6 +569,6 @@ public class MeteredKeyValueStoreTest {
                       .keySet()
                       .stream()
                       .filter(name -> name.group().equals(STORE_LEVEL_GROUP) && name.tags().equals(tags))
-                      .toList();
+                      .collect(Collectors.toList());
     }
 }
