@@ -531,6 +531,6 @@ public class MeteredWindowStoreTest {
             .keySet()
             .stream()
             .filter(name -> name.group().equals(STORE_LEVEL_GROUP) && name.tags().equals(tags))
-            .toList();
+            .collect(Collectors.toList());
     }
 }
